Completed ticket #513 - fixed a bug with fTemplating improperly minifying `#000000` in CSS
git-svn-id: http://svn.flourishlib.com/trunk@918 8e09ec71-114c-0410-a285-86ecef5c4c40

--- a/tests/resources/css/bar-min.css
+++ b/tests/resources/css/bar-min.css
@@ -1,1 +1,1 @@
-.example *+span{font-family:'Helvetica  Nueue',"Lucida  Grande"}
+.example *+span{font-family:'Helvetica  Nueue',"Lucida  Grande"}.menu{background-color:#000;background-color:#00000080;background-color:#00000000}
