--- a/tests/resources/css/bar.css
+++ b/tests/resources/css/bar.css
@@ -1,3 +1,9 @@
 .example * + span {
 	font-family: 'Helvetica  Nueue', "Lucida  Grande";
 }
+
+.menu {
+	background-color: #000000;
+	background-color: #00000080;
+	background-color: #00000000;	
+}
